qtest/include/qtest/qnode.h;qtest/include/qtest/testview.h;qtest/src/qnode.cpp;qtest/src/tetview.cpp;test_nodelet/CMakeLists.txt;test_nodelet/package.xml;test_nodelet/test_node.launch;test_nodelet/src/hough_circles_nodelet.cpp;test_nodelet/src/calibrator.py;test_nodelet/src/cameracalibration.py

--- a/Function/test_nodelet/CMakeLists.txt
+++ b/Function/test_nodelet/CMakeLists.txt
@@ -10,6 +10,8 @@ find_package(catkin REQUIRED COMPONENTS
   nodelet
   roscpp
   message_generation
+  rospy
+  std_msgs
   ##OpenCV
   ##sensor_msgs
 )
